{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 460,
  "lineage": "488959c4-4c94-5935-71ed-7de83420734a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "back",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/networkInterfaces/default-back-nic",
            "ip_configuration": [
              {
                "name": "front",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network/subnets/back-net"
              }
            ],
            "location": "uksouth",
            "name": "default-back-nic",
            "network_security_group_id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/back-door",
            "private_ip_address": "10.10.2.4",
            "private_ip_addresses": [
              "10.10.2.4"
            ],
            "resource_group_name": "default"
          },
          "depends_on": [
            "azurerm_network_security_group.back",
            "azurerm_resource_group.default",
            "azurerm_subnet.back"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "data",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/networkInterfaces/default-data-nic",
            "ip_configuration": [
              {
                "name": "data",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network/subnets/data-net"
              }
            ],
            "location": "uksouth",
            "name": "default-data-nic",
            "network_security_group_id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/data-door",
            "private_ip_address": "10.10.4.4",
            "private_ip_addresses": [
              "10.10.4.4"
            ],
            "resource_group_name": "default"
          },
          "depends_on": [
            "azurerm_network_security_group.data",
            "azurerm_resource_group.default",
            "azurerm_subnet.data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "front",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/networkInterfaces/default-front-nic",
            "ip_configuration": [
              {
                "name": "front",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/publicIPAddresses/front-pip",
                "subnet_id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network/subnets/front-net"
              }
            ],
            "location": "uksouth",
            "name": "default-front-nic",
            "network_security_group_id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/front-door",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "default"
          },
          "depends_on": [
            "azurerm_network_security_group.front",
            "azurerm_public_ip.front",
            "azurerm_resource_group.default",
            "azurerm_subnet.front"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "manage",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/networkInterfaces/default-manage-nic",
            "ip_configuration": [
              {
                "name": "manage",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/publicIPAddresses/manage-pip",
                "subnet_id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network/subnets/manage-net"
              }
            ],
            "location": "uksouth",
            "name": "default-manage-nic",
            "network_security_group_id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/manage-door",
            "private_ip_address": "10.10.3.4",
            "private_ip_addresses": [
              "10.10.3.4"
            ],
            "resource_group_name": "default"
          },
          "depends_on": [
            "azurerm_network_security_group.manage",
            "azurerm_public_ip.manage",
            "azurerm_resource_group.default",
            "azurerm_subnet.manage"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "back",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/back-door",
            "location": "uksouth",
            "name": "back-door",
            "resource_group_name": "default",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH1",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH2",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH3",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.4.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "data",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/data-door",
            "location": "uksouth",
            "name": "data-door",
            "resource_group_name": "default",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH1",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH2",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "front",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/front-door",
            "location": "uksouth",
            "name": "front-door",
            "resource_group_name": "default",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "manage",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/manage-door",
            "location": "uksouth",
            "name": "manage-door",
            "resource_group_name": "default",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH1",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "front",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "front-463361681130006683",
            "fqdn": "front-463361681130006683.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/publicIPAddresses/front-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "front-pip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "default",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "manage",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "manage-463361681130006683",
            "fqdn": "manage-463361681130006683.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/publicIPAddresses/manage-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "manage-pip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "default",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "back",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.10.2.0/24",
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network/subnets/back-net",
            "name": "back-net",
            "resource_group_name": "default",
            "virtual_network_name": "default-network"
          },
          "depends_on": [
            "azurerm_resource_group.default",
            "azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "data",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.10.4.0/24",
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network/subnets/data-net",
            "name": "data-net",
            "resource_group_name": "default",
            "virtual_network_name": "default-network"
          },
          "depends_on": [
            "azurerm_resource_group.default",
            "azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "front",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.10.1.0/24",
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network/subnets/front-net",
            "name": "front-net",
            "resource_group_name": "default",
            "virtual_network_name": "default-network"
          },
          "depends_on": [
            "azurerm_resource_group.default",
            "azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "manage",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.10.3.0/24",
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network/subnets/manage-net",
            "name": "manage-net",
            "resource_group_name": "default",
            "virtual_network_name": "default-network"
          },
          "depends_on": [
            "azurerm_resource_group.default",
            "azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "default",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "id": "/subscriptions/fa87bb51-4bc4-4559-8047-1ba630f94808/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-network",
            "location": "uksouth",
            "name": "default-network",
            "resource_group_name": "default"
          },
          "depends_on": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    }
  ]
}